# soil-sensor-app

./: .gitignore  connectedhomeip  sd.txt
docs/pics/: soil_sensor_base.json
nrfconnect/: .gitignore  CMakeLists.txt  Kconfig  Kconfig.sysbuild  Kconfig.sysbuild.bak  pm_static_nrf7002dk_nrf5340_cpuapp.yml.bak  prj.conf  sysbuild.conf
nrfconnect/boards/: nrf7002dk_nrf5340_cpuapp.overlay  nrf7002dk_nrf5340_cpuapp_ns.overlay
nrfconnect/cluster_impl/: zap_cluster_list.json
nrfconnect/main/: AppEvent.cpp  AppTask.cpp  AppTask.h  AppTask_backup.cpp  DevCertsShim.cpp  LEDWidget.cpp  LEDWidget.h  SoilDeviceInfoProvider.cpp  SoilSensorManager.cpp  main.cpp  main.cpp.bak2  soil_measurement_access.cpp  soil_measurement_nrf.cpp  soil_sensor.cpp
nrfconnect/main/include/: AppTask.h  CHIPProjectConfig.h  EventTypes.h  LEDUtil.h  SoilDeviceInfoProvider.h  SoilSensorManager.h  matter_zephyr_compat.h  soil_measurement_access.h  soil_measurement_nrf.h  soil_sensor.h
nrfconnect/main/include/app/: AppTask.h  factory_reset.h
nrfconnect/main/include/cfg/: app_config.h
nrfconnect/main/include/connectivity/: ble_manager.h
nrfconnect/main/include/matter/: IdentifyHandler.h  access_manager.h  gendiag_attr_access.h  server_runtime.h
nrfconnect/main/include/sensors/: soil_moisture_sensor.h
nrfconnect/main/src/: main.cpp
nrfconnect/main/src/app/: AppEvent.cpp  AppTask.cpp  factory_reset.cpp
nrfconnect/main/src/cfg/: app_config.cpp
nrfconnect/main/src/connectivity/: ble_manager.cpp
nrfconnect/main/src/matter/: IdentifyHandler.cpp  SoilDeviceInfoProvider.cpp  access_manager.cpp  ep0_im_sanitizer.cpp  ep0_im_sanitizer.h  ep0_metadata_filter.cpp  ep0_metadata_filter.h  ep0_revision_guard.cpp  ep0_timesync_delegate.cpp  ep0_timesync_delegate.h  gendiag_attr_access.cpp  gkm_revision_override.cpp  server_runtime.cpp  timesync_attribute_access.cpp  timesync_commands.cpp
nrfconnect/main/src/matter/cluster_overrides/: identify_rev_override.cpp
nrfconnect/main/src/platform/: LEDWidget.cpp
nrfconnect/main/src/sensors/: soil_moisture_sensor.cpp
nrfconnect/shims/zephyr/net/: wifi_mgmt.h
nrfconnect/sysbuild/ipc_radio/: prj.conf
nrfconnect/sysbuild/mcuboot/: prj.conf
nrfconnect_from_lighting/: CMakeLists.txt  sysbuild.conf
nrfconnect_from_lighting/main/: main.cpp
nrfconnect_from_lighting/main/include/: SoilSensorManager.h
pykwalify/: __init__.py  core.py  errors.py
soil-sensor-common/: BUILD.gn  soil-sensor-app.matter  soil-sensor-app.zap
tc-logs/: DUT-LOG-TC-ACE-2.1-FAIL.rtf  DUT-LOG-TC-CADMIN-1.19.rtf  DUT-LOG-TC-DGGEN-2.1.rtf  DUT-LOG-TC-IDM-10.2-FAIL.rtf
